# scopeql

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  licenserc.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.cargo/: config.toml
.github/: semantic.yml
.github/actions/docker-push-by-digest/: action.yml
.github/actions/docker-release/: action.yml
.github/actions/docker-sanity-check/: action.yml
.github/workflows/: ci.yml  release-docker.yml  release-pypi.yml  release.yml
scopeql/: CHANGELOG.md  Cargo.toml  build.rs  pyproject.toml
scopeql-lexer/: Cargo.toml
scopeql-lexer/benches/: lexer.rs
scopeql-lexer/src/: lexer.rs  lib.rs
scopeql-lexer/tests/: tests.rs
scopeql-lexer/tests/snapshots/: tests__basic_statements-2.snap  tests__basic_statements.snap  tests__comments.snap  tests__complex_query-2.snap  tests__complex_query.snap  tests__errors-2.snap  tests__errors-3.snap  tests__errors.snap  tests__keywords_case_insensitive.snap  tests__literals_and_escapes.snap  tests__numbers-2.snap  tests__numbers.snap  tests__ok-2.snap  tests__ok-3.snap  tests__ok-4.snap  tests__ok.snap  tests__struct_access.snap  tests__symbols.snap
scopeql-parser/: CHANGELOG.md  Cargo.toml  README.md
scopeql-parser/src/: lib.rs  tokenizer.rs
scopeql-parser/tests/: tests.rs
scopeql-parser/tests/snapshots/: tests__comments.snap  tests__errors-2.snap  tests__errors-3.snap  tests__errors.snap  tests__keywords_case_insensitive.snap  tests__literals_and_escapes.snap  tests__numbers-2.snap  tests__numbers.snap  tests__ok-2.snap  tests__ok-3.snap  tests__ok-4.snap  tests__ok.snap  tests__struct_access.snap  tests__symbols.snap
scopeql/scripts/: check-version-tag-match.sh  docker-build.sh
scopeql/src/: command.rs  config.rs  execute.rs  global.rs  lib.rs  load.rs  main.rs  pretty.rs  tokenizer.rs  version.rs
scopeql/src/client/: connection.rs  mod.rs  protocol.rs  result.rs
scopeql/src/repl/: command.rs  entrypoint.rs  highlight.rs  mod.rs  prompt.rs  validate.rs
xtask/: Cargo.toml
xtask/src/: main.rs
