# Copyright 2025 ScopeDB, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["scopeql", "scopeql-parser", "xtask"]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://github.com/scopedb/scopeql"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scopedb/scopeql"

[workspace.dependencies]
scopeql-parser = { path = "scopeql-parser", version = "0.1.1" }

[workspace.lints.rust]
unknown_lints = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"

[profile.release]
debug = true
lto = "thin"

[profile.dist]
codegen-units = 1
debug = true
inherits = "release"
lto = "fat"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
