# Copyright 2025 ScopeDB, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scopeql-parser"
version = "0.1.0"

rust-version = "1.90.0"

description = "A parser for ScopeQL queries and commands."
readme = "README.md"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# recognizes command tokens
command = []

[dependencies]
logos = { version = "0.16.0" }

[dev-dependencies]
comfy-table = { version = "7.2.1" }
insta = { version = "1.45.0" }

[lints]
workspace = true
