# Copyright 2025 ScopeDB, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.5,<2.0"]

[project]
name = "scopeql"
version = "0.3.1"

description = "A command-line interface for ScopeDB"
requires-python = ">=3.10"

classifiers = [
  "Environment :: Console",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Rust",
]
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
Homepage = "https://github.com/scopedb/scopeql"
Repository = "https://github.com/scopedb/scopeql"

[tool.maturin]
bindings = "bin"
strip = true
